Renamed some files to be consistent

--- a/src/classes/BusinessUnitCreatorHelperTest.cls
+++ b/src/classes/BusinessUnitCreatorHelperTest.cls
@@ -1,24 +1,24 @@
 @isTest
-public with sharing class BusinessUnitCreationHelperTest {
+public with sharing class BusinessUnitCreatorHelperTest {
 	@isTest static void testBusinessUnitCreation() {
 		List<grc__Business_Unit__c> results;
 		
-		results = BusinessUnitCreationHelper.createBusinessUnits(null, null);
+		results = BusinessUnitCreatorHelper.createBusinessUnits(null);
 		System.assertNotEquals(null, results);
 		System.assertEquals(0, results.size());
 		
-		results = BusinessUnitCreationHelper.createBusinessUnits(new List<String>(), null);
+		results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<Id, List<String>>());
 		System.assertNotEquals(null, results);
 		System.assertEquals(0, results.size());		
 		
-		results = BusinessUnitCreationHelper.createBusinessUnits(new List<String> { 'Parent' }, null);
+		results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<Id, List<String>> { null => new List<String> { 'Parent' } });
 		System.assertNotEquals(null, results);
 		System.assertEquals(1, results.size());
 		System.assertEquals('Parent', results.get(0).Name);
 		System.assertEquals('Parent', results.get(0).Risk__Sharing_Group_Name__c);
 		System.assertEquals(null, results.get(0).Risk__Scoring_Scheme__c);
 		
-		results = BusinessUnitCreationHelper.createBusinessUnits(new List<String> { 'Parent' }, '01p58000000nl6e');
+		results = BusinessUnitCreatorHelper.createBusinessUnits(new Map<Id, List<String>> { '01p58000000nl6e' => new List<String> { 'Parent' } } );
 		System.assertNotEquals(null, results);
 		System.assertEquals(1, results.size());
 		System.assertEquals('Parent', results.get(0).Name);
